--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_PORT = 80;
-REACT_APP_HOST = 173.254.104.55;
-REACT_APP_USER = jkildare_user;
-REACT_APP_PW = Jaden0102!;
-REACT_APP_DB = jkildare_mydb;
+PORT = 80;
+HOST = 173.254.104.55;
+USER = jkildare_user;
+PW = Jaden0102!;
+DB = jkildare_mydb;
