--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 8080;
-HOST = jkildare;
-USER = jkildare_user;
-PW = Jaden0102!;
-DB = jkildare_mydb;
+HOST = 'jkildare';
+USER = 'jkildare_user';
+PW = 'Jaden0102!';
+DB = 'jkildare_mydb';
 DBPORT = 3306;
