--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-PORT = 5000;
-HOST =  173.254.104.55;
-USER = 'jkildare_user';
-PW = 'Jaden0102!';
-DB = 'jkildare_mydb';
-DBPORT = 3306;
+PORT = 5000
+HOST =  173.254.104.55
+USER = 'jkildare_user'
+PW = 'Jaden0102!'
+DB = 'jkildare_mydb'
