--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT = 80
-HOST =  173.254.104.55
-USER = "jkildare_user"
-PW = "Jaden0102!"
-DB = "jkildare_mydb"
+REACT_APP_PORT = 3000;
+REACT_APP_HOST = 'localhost';
+REACT_APP_USER = 'root';
+REACT_APP_PW = 'root';
+REACT_APP_DB = 'mydb';
