--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "student_registration_system",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "i": "^0.3.7",
     "js-cookie": "^3.0.1",
@@ -23,7 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "react-scripts start",
     "dev": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
