--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "nodemon server.js",
-    "build": "react-scripts build",
+    "build": "CI='' npm run build,
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
