--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3000
-HOST=localhost
-DB_USER=root
-PW=Jaden0102!
-DB=mydb
+MYSQLPORT=7068
+MYSQLHOST=containers-us-west-131.railway.app
+MYSQLUSER=root
+MYSQLPASSWORD=akHj6zhIEvRMgFWxcPKi
+MYSQLDATABASE=railway
