--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /node_modules
-.env
+MYSQLPORT=7068
+MYSQLHOST=containers-us-west-131.railway.app
+MYSQLUSER=root
+MYSQLPASSWORD=akHj6zhIEvRMgFWxcPKi
+MYSQLDATABASE=railway
